AUGREL/src/objects/Financial_Account_Customer__c.object
<CustomObject>
    <fields>
        <fullName>Shell_Case_ContactId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ContactId used to relate to Shell Cases or cases for users who have not logged into the system, and do not yet have a weblogin ContactId</description>
        <label>Shell Case ContactId</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Financial Account Customers (Shell Case ContactId)</relationshipLabel>
        <relationshipName>Financial_Account_Customers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Social_Security_Number__c</fullName>
        <formula>Account__r.Social_Security_Number__pc</formula>
        <label>(IVR) Social Security Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Identification_Number__c</fullName>
        <formula>Account__r.Tax_Identification_Number__c</formula>
        <label>(IVR) Tax Identification Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Universal_Customer_Id__c</fullName>
        <label>Universal Customer Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Update_Source__c</fullName>
        <description>Source of Update</description>
        <label>Update Source</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Identification_Number_Last_8_Ch__c</fullName>
        <formula>TRIM(RIGHT(Financial_Account__r.Collateral__r.Vehicle_Identification_Number__c, 8))</formula>
        <label>(IVR) Vehicle Identification Num Last8Ch</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Identification_Number__c</fullName>
        <formula>Financial_Account__r.Collateral__r.Vehicle_Identification_Number__c</formula>
        <label>(IVR) Vehicle Identification Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Visible_to_Customer__c</fullName>
        <description>If the parent Financial Account&apos;s Code Edit Message contains the listed values then the record should be hidden from the Community User.</description>
        <formula>AND(
    NOT(OR(
       Financial_Account__r.Code_Edit_Message__c = &apos;1301I&apos;,
       Financial_Account__r.Code_Edit_Message__c = &apos;1309I&apos;,
       Financial_Account__r.Code_Edit_Message__c = &apos;1312I&apos;,
       Financial_Account__r.Code_Edit_Message__c = &apos;1313I&apos;,
       Financial_Account__r.Code_Edit_Message__c = &apos;1317I&apos;,
       Financial_Account__r.Code_Edit_Message__c = &apos;1318I&apos;
    )),
    ISBLANK(Financial_Account__r.Archive_Flag__c)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Visible to Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Weblogin_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Weblogin Contact stores the contact id of the weblogin register to this FinAcctCustomer Record.
Null if no Weblogin Contact is register.

Customer Community will allow weblogin customer to read this record</description>
        <label>Weblogin Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Financial Account Customers</relationshipLabel>
        <relationshipName>Financial_Account_Customers1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Work_Phone_Bill_To__c</fullName>
        <description>Work Phone Number</description>
        <label>Work Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Work_Phone_Garage__c</fullName>
        <label>Work Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Work_Phone_NoCall_Reason_Code_Garage__c</fullName>
        <label>Work Phone NoCall Reason Code Garage</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Phone_No_Call_Reason_BillTo__c</fullName>
        <formula>CASE(Work_Phone_No_Call_Reason_Code_Bill_To__c,
&quot;D&quot;, &quot;D - DNC indicator checked for Work #&quot;,
&quot;S&quot;, &quot;S - Work # matches another number on the account that is marked DNC&quot;,
&quot;X&quot;, &quot;X - Invalid indicator checked for Work #&quot;,
&quot;B&quot;, &quot;B - Mobile indicator checked for the Work # and abbreviated/overall consent is “No”&quot;,
&quot;C&quot;, &quot;C - No indicators or restrictions&quot;,
&quot;A&quot;, &quot;A - Home # matches the Work #&quot;,
&quot;&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Work Phone No-Call Reason</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Phone_No_Call_Reason_Code_Bill_To__c</fullName>
        <label>Work Phone No Call Reason Code Bill To</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Phone_No_Call_Reason_Garage__c</fullName>
        <formula>CASE(Work_Phone_NoCall_Reason_Code_Garage__c,
&quot;D&quot;, &quot;D - DNC indicator checked for Work #&quot;,
&quot;S&quot;, &quot;S - Work # matches another number on the account that is marked DNC&quot;,
&quot;X&quot;, &quot;X - Invalid indicator checked for Work #&quot;,
&quot;B&quot;, &quot;B - Mobile indicator checked for the Work # and abbreviated/overall consent is “No”&quot;,
&quot;C&quot;, &quot;C - No indicators or restrictions&quot;,
&quot;A&quot;, &quot;A - Home # matches the Work #&quot;,
&quot;&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Work Phone No-Call Reason</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Phone_Ownership_Score_Billing__c</fullName>
        <description>SRC: UCM 
INT: TIBCO UCM Update 
Trans: N 
BU: Legal and Compliance requirements for TFS auto dialer 
FD: A third party vendor services is utilized to scrub the current customer phone data for validation purposes to determine phone ownership. UCM publishes the data to downstream system to indicate the owner confidence. (CP 2401)</description>
        <label>Work Phone Ownership Score</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Phone_Ownership_Score_Garage__c</fullName>
        <description>SRC: UCM 
INT: TIBCO UCM Update 
Trans: N 
BU: Legal and Compliance requirements for TFS auto dialer 
FD: A third party vendor services is utilized to scrub the current customer phone data for validation purposes to determine phone ownership. UCM publishes the data to downstream system to indicate the owner confidence. (CP 2401)</description>
        <label>Work Phone Ownership Score</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Written_Authorization_to_Update_Privacy__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Received written request to change Privacy Elections to IN?</description>
        <inlineHelpText>Received written request to change Privacy Elections to IN?</inlineHelpText>
        <label>Written Authorization to Update Privacy</label>
        <type>Checkbox</type>
    </fields>
    <label>Financial Account Customer</label>
    <nameField>
        <label>Financial Account Customer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Financial Account Customers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Area_Code_Must_Be_Valid_Home_BillTo</fullName>
        <active>true</active>
        <description>Checks home billing phone number for invalid area codes</description>
        <errorConditionFormula>AND(
 NOT(Reentrant_Trigger_Executed__c),
 ISCHANGED(HomePhone_BillTo__c),
 NOT($Setup.Validation_Bypass__c.Phone_Number_Validations__c),
 NOT(ISBLANK(HomePhone_BillTo__c)),
 CONTAINS(
  $Label.Invalid_Area_Codes, 
  LEFT(
   SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(HomePhone_BillTo__c,&quot; &quot;,&quot;&quot;),&quot;-&quot;,&quot;&quot;),&quot;)&quot;,&quot;&quot;),&quot;(&quot;,&quot;&quot;),
   3
  )
 ),
 NOT(Invalid_Home_Phone_Acknowledged_BillTo__c)
)</errorConditionFormula>
        <errorDisplayField>HomePhone_BillTo__c</errorDisplayField>
        <errorMessage>The phone number you&apos;ve entered contains an invalid area code. Please confirm with customer.  If confirmed with customer, check the Home Phone Format Confirmed checkbox and save to continue.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Area_Code_Must_Be_Valid_Home_Garage</fullName>
        <active>true</active>
        <description>Checks home garage phone number for invalid area codes</description>
        <errorConditionFormula>AND(
 NOT(Reentrant_Trigger_Executed__c),
 ISCHANGED(Home_Phone_Garage__c),
 NOT($Setup.Validation_Bypass__c.Phone_Number_Validations__c),
 NOT(ISBLANK(Home_Phone_Garage__c)),
 CONTAINS(
  $Label.Invalid_Area_Codes, 
  LEFT(
   SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(Home_Phone_Garage__c,&quot; &quot;,&quot;&quot;),&quot;-&quot;,&quot;&quot;),&quot;)&quot;,&quot;&quot;),&quot;(&quot;,&quot;&quot;),
   3
  )
 ),
 NOT(Invalid_Home_Phone_Acknowledged_Garage__c)
)</errorConditionFormula>
        <errorDisplayField>Home_Phone_Garage__c</errorDisplayField>
        <errorMessage>The phone number you&apos;ve entered contains an invalid area code. Please confirm with customer.  If confirmed with customer, check the Home Phone Format Confirmed checkbox and save to continue.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Area_Code_Must_Be_Valid_Mobile</fullName>
        <active>true</active>
        <description>Checks mobile phone number for invalid area codes</description>
        <errorConditionFormula>AND(
 NOT(Reentrant_Trigger_Executed__c),
 ISCHANGED(Mobile_Phone__c),
 NOT($Setup.Validation_Bypass__c.Phone_Number_Validations__c),
 NOT(ISBLANK(Mobile_Phone__c)),
 CONTAINS(
  $Label.Invalid_Area_Codes, 
  LEFT(
   SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(Mobile_Phone__c,&quot; &quot;,&quot;&quot;),&quot;-&quot;,&quot;&quot;),&quot;)&quot;,&quot;&quot;),&quot;(&quot;,&quot;&quot;),
   3
  )
 ),
 NOT(Invalid_Mobile_Phone_Acknowledged__c)
)</errorConditionFormula>
        <errorDisplayField>Mobile_Phone__c</errorDisplayField>
        <errorMessage>The phone number you&apos;ve entered contains an invalid area code. Please confirm with customer.  If confirmed with customer, check the Mobile Phone Format Confirmed checkbox and save to continue.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Area_Code_Must_Be_Valid_Work_BillTo</fullName>
        <active>true</active>
        <description>Checks work billing phone number for invalid area codes</description>
        <errorConditionFormula>AND(
 NOT(Reentrant_Trigger_Executed__c),
 ISCHANGED(Work_Phone_Bill_To__c),
 NOT($Setup.Validation_Bypass__c.Phone_Number_Validations__c),
 NOT(ISBLANK(Work_Phone_Bill_To__c)),
 CONTAINS(
  $Label.Invalid_Area_Codes, 
  LEFT(
   SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(Work_Phone_Bill_To__c,&quot; &quot;,&quot;&quot;),&quot;-&quot;,&quot;&quot;),&quot;)&quot;,&quot;&quot;),&quot;(&quot;,&quot;&quot;),
   3
  )
 ),
 NOT(Invalid_Work_Phone_Acknowledged_BillTo__c)
)</errorConditionFormula>
        <errorDisplayField>Work_Phone_Bill_To__c</errorDisplayField>
        <errorMessage>The phone number you&apos;ve entered contains an invalid area code. Please confirm with customer.  If confirmed with customer, check the Work Phone Format Confirmed checkbox and save to continue.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Area_Code_Must_Be_Valid_Work_Garage</fullName>
        <active>true</active>
        <description>Checks work garage phone number for invalid area codes</description>
        <errorConditionFormula>AND(
 NOT(Reentrant_Trigger_Executed__c),
 ISCHANGED(Work_Phone_Garage__c),
 NOT($Setup.Validation_Bypass__c.Phone_Number_Validations__c),
 NOT(ISBLANK(Work_Phone_Garage__c)),
 CONTAINS(
  $Label.Invalid_Area_Codes, 
  LEFT(
   SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(Work_Phone_Garage__c,&quot; &quot;,&quot;&quot;),&quot;-&quot;,&quot;&quot;),&quot;)&quot;,&quot;&quot;),&quot;(&quot;,&quot;&quot;),
   3
  )
 ),
 NOT(Invalid_Work_Phone_Acknowledged_Garage__c)
)</errorConditionFormula>
        <errorDisplayField>Work_Phone_Garage__c</errorDisplayField>
        <errorMessage>The phone number you&apos;ve entered contains an invalid area code. Please confirm with customer.  If confirmed with customer, check the Work Phone Format Confirmed checkbox and save to continue.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Bill_To_Addr_Spec_Inst_Format</fullName>
        <active>true</active>
        <description>Cannot exceed 25 char for Lease and 36 char for Retail.</description>
        <errorConditionFormula>AND(
  NOT($Profile.Name=&quot;System Administrator&quot;||$Profile.Name=&quot;API Only&quot;||$Profile.Name=&quot;System Administrator Clone&quot;),
  NOT(Reentrant_Trigger_Executed__c),
  ISCHANGED(Address_Special_BillTo__c),
  OR(
    LEN(Address_Special_BillTo__c) &gt; 25 &amp;&amp;  Financial_Account__r.RecordType.Name = &quot;Lease&quot;,
    LEN(Address_Special_BillTo__c) &gt; 36 &amp;&amp;  Financial_Account__r.RecordType.Name = &quot;Retail&quot;
)
)</errorConditionFormula>
        <errorDisplayField>Address_Special_BillTo__c</errorDisplayField>
        <errorMessage>Care of/special instructions cannot exceed 25 characters in length for leases or 36 characters for loans</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Bill_To_Home_Phone_DNC_Invalid</fullName>
        <active>true</active>
        <description>Both DNC and Invalid flags cannot be set, it should be just 1 of these 2.</description>
        <errorConditionFormula>AND(
  NOT($Profile.Name=&quot;System Administrator&quot;||$Profile.Name=&quot;API Only&quot;||$Profile.Name=&quot;System Administrator Clone&quot;),
  NOT(Reentrant_Trigger_Executed__c),
  OR(
    ISCHANGED(Flag_Home_Phone_DNC_BillTo__c),
    ISCHANGED(Flag_Home_Phone_Invalid_BillTo__c)
  ),
  Flag_Home_Phone_DNC_BillTo__c &amp;&amp; Flag_Home_Phone_Invalid_BillTo__c
)</errorConditionFormula>
        <errorDisplayField>Flag_Home_Phone_Invalid_BillTo__c</errorDisplayField>
        <errorMessage>DNC and Invalid flags cannot be set at the same time - deselect one of them</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Bill_To_Home_Phone_Format</fullName>
        <active>true</active>
        <description>The new phone number should be numerical and should not exceed 10 digits.</description>
        <errorConditionFormula>AND(
  NOT($Profile.Name=&quot;System Administrator&quot;||$Profile.Name=&quot;API Only&quot;||$Profile.Name=&quot;System Administrator Clone&quot;),
  NOT(Reentrant_Trigger_Executed__c),
  ISCHANGED(HomePhone_BillTo__c),
  NOT(REGEX(HomePhone_BillTo__c, &quot;\\([0-9]{3}\\)\\s[0-9]{3}\\-[0-9]{4}&quot;))
)</errorConditionFormula>
        <errorDisplayField>HomePhone_BillTo__c</errorDisplayField>
        <errorMessage>Phone numbers entered must be in valid 10 digit phone formats only</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Bill_To_Street_Format</fullName>
        <active>true</active>
        <description>Cannot exceed 25 char for Lease and 36 char for Retail.</description>
        <errorConditionFormula>AND(
  NOT($Profile.Name=&quot;System Administrator&quot;||$Profile.Name=&quot;API Only&quot;||$Profile.Name=&quot;System Administrator Clone&quot;),
  NOT(Reentrant_Trigger_Executed__c),
  ISCHANGED(Mailing_Street_BillTo__c),
  OR(
    LEN(Mailing_Street_BillTo__c) &gt; 25 &amp;&amp;  Financial_Account__r.RecordType.Name = &quot;Lease&quot;,
    LEN(Mailing_Street_BillTo__c) &gt; 36 &amp;&amp;  Financial_Account__r.RecordType.Name = &quot;Retail&quot;
)
)</errorConditionFormula>
        <errorDisplayField>Mailing_Street_BillTo__c</errorDisplayField>
        <errorMessage>Street addresses cannot exceed 25 characters in length for leases or 36 characters for loans</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Bill_To_Work_Phone_DNC_Invalid</fullName>
        <active>true</active>
        <description>Both DNC and Invalid flags cannot be set, it should be just 1 of these 2.</description>
        <errorConditionFormula>AND(
  NOT($Profile.Name=&quot;System Administrator&quot;||$Profile.Name=&quot;API Only&quot;||$Profile.Name=&quot;System Administrator Clone&quot;),
  NOT(Reentrant_Trigger_Executed__c),
  OR(
    ISCHANGED(Flag_Work_Phone_DNC_BillTo__c),
    ISCHANGED(Flag_Work_Phone_Invalid_BillTo__c)
  ),
  Flag_Work_Phone_DNC_BillTo__c &amp;&amp; Flag_Work_Phone_Invalid_BillTo__c
)</errorConditionFormula>
        <errorDisplayField>Flag_Work_Phone_Invalid_BillTo__c</errorDisplayField>
        <errorMessage>DNC and Invalid flags cannot be set at the same time - deselect one of them</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Bill_To_Work_Phone_Format</fullName>
        <active>true</active>
        <description>The new phone number should be numerical and should not exceed 10 digits.</description>
        <errorConditionFormula>AND(
  NOT($Profile.Name=&quot;System Administrator&quot;||$Profile.Name=&quot;API Only&quot;||$Profile.Name=&quot;System Administrator Clone&quot;),
  NOT(Reentrant_Trigger_Executed__c),
  ISCHANGED(Work_Phone_Bill_To__c),
  NOT(REGEX(Work_Phone_Bill_To__c, &quot;\\([0-9]{3}\\)\\s[0-9]{3}\\-[0-9]{4}&quot;))
)</errorConditionFormula>
        <errorDisplayField>Work_Phone_Bill_To__c</errorDisplayField>
        <errorMessage>Phone numbers entered must be in valid 10 digit phone formats only</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Bill_To_Zip_Format</fullName>
        <active>true</active>
        <description>The new zip code entered by the user should be verified to have a length of 5 digit number, if greater or smaller, or if not a number, an error message should be displayed to enter the zip code correctly.</description>
        <errorConditionFormula>AND(
  NOT($Profile.Name=&quot;System Administrator&quot;||$Profile.Name=&quot;API Only&quot;||$Profile.Name=&quot;System Administrator Clone&quot;),
  NOT(Reentrant_Trigger_Executed__c),
  ISCHANGED(Mailing_PostalCode_BillTo__c),
  OR(
    LEN(Mailing_PostalCode_BillTo__c) != 5,
    NOT(ISNUMBER(Mailing_PostalCode_BillTo__c))
)
)</errorConditionFormula>
        <errorDisplayField>Mailing_PostalCode_BillTo__c</errorDisplayField>
        <errorMessage>Zip codes entered must be 5 digits only</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Billing_Address_Lease_Only</fullName>
        <active>true</active>
        <description>Prevent edits in billing address area for non-Lease accounts</description>
        <errorConditionFormula>AND(
  NOT($Profile.Name=&quot;System Administrator&quot;||$Profile.Name=&quot;API Only&quot;||$Profile.Name=&quot;System Administrator Clone&quot;),
  NOT(Reentrant_Trigger_Executed__c),
  NOT(Financial_Account__r.RecordType.Name = &quot;Lease&quot;),
  OR(
    ISCHANGED(Address_Special_BillTo__c),
    ISCHANGED(Billing_Zip_Code_Extn__c),
    ISCHANGED(Mailing_BillTo_Name__c),
    ISCHANGED(Mailing_City_BillTo__c),
    ISCHANGED(Mailing_CountryCode_BillTo__c),
    ISCHANGED(HomePhone_BillTo__c),
    ISCHANGED(Flag_Home_Phone_DNC_BillTo__c),
    ISCHANGED(Flag_Home_Phone_Invalid_BillTo__c),
    ISCHANGED(Flag_Home_Phone_IsMobile_BillTo__c),
    ISCHANGED(Home_Phone_No_Call_Reason_Code_BillTo__c),
    ISCHANGED(Mailing_PostalCode_BillTo_Ext__c),
    ISCHANGED(Mailing_State_BillTo__c),
    ISCHANGED(Mailing_Street_BillTo__c),
    ISCHANGED(Work_Phone_Bill_To__c),
    ISCHANGED(Flag_Work_Phone_DNC_BillTo__c),
    ISCHANGED(Flag_Work_Phone_Invalid_BillTo__c),
    ISCHANGED(Flag_Work_Phone_Is_Mobile_BillTo__c),
    ISCHANGED(Work_Phone_No_Call_Reason_Code_Bill_To__c),
    ISCHANGED(Mailing_PostalCode_BillTo__c)
  ) 
)</errorConditionFormula>
        <errorMessage>Billing address entries are only valid for lease accounts. Please undo any changes in the billing area or cancel editing.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Blank_Not_Allowed_For_Elec_Bus_Agr</fullName>
        <active>true</active>
        <description>If a value is already populated in Electronic Business Agreement, it cannot be updated to a blank.</description>
        <errorConditionFormula>AND(
  NOT($Profile.Name=&quot;System Administrator&quot;||$Profile.Name=&quot;API Only&quot;||$Profile.Name=&quot;System Administrator Clone&quot;),
  NOT(Reentrant_Trigger_Executed__c),
  NOT(ISBLANK(TEXT(PRIORVALUE(Electronic_Business_Agreement_Date__c)))),
  ISBLANK(TEXT(Electronic_Business_Agreement_Date__c))
)</errorConditionFormula>
        <errorDisplayField>Election_Electronic_Business_Agreement__c</errorDisplayField>
        <errorMessage>Please select a value for Electronic Business Agreement</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Blank_Not_Allowed_For_Email_Mktg</fullName>
        <active>true</active>
        <description>If a value is already populated in Email Marketing, it cannot be updated to a blank.</description>
        <errorConditionFormula>AND(
  NOT($Profile.Name=&quot;System Administrator&quot;||$Profile.Name=&quot;API Only&quot;||$Profile.Name=&quot;System Administrator Clone&quot;),
  NOT(Reentrant_Trigger_Executed__c),
  NOT(ISBLANK(TEXT(PRIORVALUE(Election_Email_Marketing__c)))),
  ISBLANK(TEXT(Election_Email_Marketing__c))
)</errorConditionFormula>
        <errorDisplayField>Election_Email_Marketing__c</errorDisplayField>
        <errorMessage>Please select a value for Email Marketing</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Blank_Not_Allowed_For_Home_Phn_Mktg</fullName>
        <active>true</active>
        <description>If a value is already populated in Home Phone Marketing, it cannot be updated to a blank.</description>
        <errorConditionFormula>AND(
  NOT($Profile.Name=&quot;System Administrator&quot;||$Profile.Name=&quot;API Only&quot;||$Profile.Name=&quot;System Administrator Clone&quot;),
  NOT(Reentrant_Trigger_Executed__c),
  NOT(ISBLANK(TEXT(PRIORVALUE(Election_Home_Phone_Marketing__c)))),
  ISBLANK(TEXT(Election_Home_Phone_Marketing__c))
)</errorConditionFormula>
        <errorDisplayField>Election_Home_Phone_Marketing__c</errorDisplayField>
        <errorMessage>Please select a value for Home Phone Marketing</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Blank_Not_Allowed_For_Language_Pref</fullName>
        <active>true</active>
        <description>If a value is already populated in Language Preference, it cannot be updated to a blank.</description>
        <errorConditionFormula>AND(
  NOT($Profile.Name=&quot;System Administrator&quot;||$Profile.Name=&quot;API Only&quot;||$Profile.Name=&quot;System Administrator Clone&quot;),
  NOT(Reentrant_Trigger_Executed__c),
  NOT(ISBLANK(TEXT(PRIORVALUE(Election_Language_Preference__c)))),
  ISBLANK(TEXT(Election_Language_Preference__c))
)</errorConditionFormula>
        <errorDisplayField>Election_Language_Preference__c</errorDisplayField>
        <errorMessage>Please select a value for Language Preference</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Blank_Not_Allowed_For_Mobile_Phn_Mktg</fullName>
        <active>true</active>
        <description>If a value is already populated in Mobile Phone Marketing, it cannot be updated to a blank.</description>
        <errorConditionFormula>AND(
  NOT($Profile.Name=&quot;System Administrator&quot;||$Profile.Name=&quot;API Only&quot;||$Profile.Name=&quot;System Administrator Clone&quot;),
  NOT(Reentrant_Trigger_Executed__c),
  NOT(ISBLANK(TEXT(PRIORVALUE(Election_Mobile_Phone_Marketing__c)))),
  ISBLANK(TEXT(Election_Mobile_Phone_Marketing__c))
)</errorConditionFormula>
        <errorDisplayField>Election_Mobile_Phone_Marketing__c</errorDisplayField>
        <errorMessage>Please select a value for Mobile Phone Marketing</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Blank_Not_Allowed_For_Other_Phn_Mktg</fullName>
        <active>true</active>
        <description>If a value is already populated in Other Phone Marketing, it cannot be updated to a blank.</description>
        <errorConditionFormula>AND(
  NOT($Profile.Name=&quot;System Administrator&quot;||$Profile.Name=&quot;API Only&quot;||$Profile.Name=&quot;System Administrator Clone&quot;),
  NOT(Reentrant_Trigger_Executed__c),
  NOT(ISBLANK(TEXT(PRIORVALUE(Election_Other_Phone_Marketing__c)))),
  ISBLANK(TEXT(Election_Other_Phone_Marketing__c))
)</errorConditionFormula>
        <errorDisplayField>Election_Other_Phone_Marketing__c</errorDisplayField>
        <errorMessage>Please select a value for Other Phone Marketing</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Blank_Not_Allowed_For_Overall_Consent</fullName>
        <active>true</active>
        <description>If a value is already populated in Overall Consent, it cannot be updated to a blank.</description>
        <errorConditionFormula>AND(
  NOT($Profile.Name=&quot;System Administrator&quot;||$Profile.Name=&quot;API Only&quot;||$Profile.Name=&quot;System Administrator Clone&quot;),
  NOT(Reentrant_Trigger_Executed__c),
  NOT(ISBLANK(TEXT(PRIORVALUE(Election_Overall_Consent__c)))),
  ISBLANK(TEXT(Election_Overall_Consent__c))
)</errorConditionFormula>
        <errorDisplayField>Election_Overall_Consent__c</errorDisplayField>
        <errorMessage>Please select a value for Overall Consent</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Blank_Not_Allowed_For_Pmt_Not_Rec_Email</fullName>
        <active>true</active>
        <description>If a value is already populated in Payment Not Received Email, it cannot be updated to a blank.</description>
        <errorConditionFormula>AND(
  NOT($Profile.Name=&quot;System Administrator&quot;||$Profile.Name=&quot;API Only&quot;||$Profile.Name=&quot;System Administrator Clone&quot;),
  NOT(Reentrant_Trigger_Executed__c),
  NOT(ISBLANK(TEXT(PRIORVALUE(Election_Payment_NotReceivedEmail__c)))),
  ISBLANK(TEXT(Election_Payment_NotReceivedEmail__c))
)</errorConditionFormula>
        <errorDisplayField>Election_Payment_NotReceivedEmail__c</errorDisplayField>
        <errorMessage>Please select a value for Payment Not Received Email</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Blank_Not_Allowed_For_Pmt_Not_Rec_Text</fullName>
        <active>true</active>
        <description>If a value is already populated in Payment Not Received Text, it cannot be updated to a blank.</description>
        <errorConditionFormula>AND(
  NOT($Profile.Name=&quot;System Administrator&quot;||$Profile.Name=&quot;API Only&quot;||$Profile.Name=&quot;System Administrator Clone&quot;),
  NOT(Reentrant_Trigger_Executed__c),
  NOT(ISBLANK(TEXT(PRIORVALUE(Election_Payment_NotReceivedText__c)))),
  ISBLANK(TEXT(Election_Payment_NotReceivedText__c))
)</errorConditionFormula>
        <errorDisplayField>Election_Payment_NotReceivedText__c</errorDisplayField>
        <errorMessage>Please select a value for Payment Not Received Text</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Blank_Not_Allowed_For_Pmt_Rec_Email</fullName>
        <active>true</active>
        <description>If a value is already populated in Payment Received Email, it cannot be updated to a blank.</description>
        <errorConditionFormula>AND(
  NOT($Profile.Name=&quot;System Administrator&quot;||$Profile.Name=&quot;API Only&quot;||$Profile.Name=&quot;System Administrator Clone&quot;),
  NOT(Reentrant_Trigger_Executed__c),
  NOT(ISBLANK(TEXT(PRIORVALUE(Election_Payment_Received_Email__c)))),
  ISBLANK(TEXT(Election_Payment_Received_Email__c))
)</errorConditionFormula>
        <errorDisplayField>Election_Payment_Received_Email__c</errorDisplayField>
        <errorMessage>Please select a value for Payment Received Email</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Blank_Not_Allowed_For_Pmt_Rec_Text</fullName>
        <active>true</active>
        <description>If a value is already populated in Payment Received Text, it cannot be updated to a blank.</description>
        <errorConditionFormula>AND(
  NOT($Profile.Name=&quot;System Administrator&quot;||$Profile.Name=&quot;API Only&quot;||$Profile.Name=&quot;System Administrator Clone&quot;),
  NOT(Reentrant_Trigger_Executed__c),
  NOT(ISBLANK(TEXT(PRIORVALUE(Election_Payment_Received_Text__c)))),
  ISBLANK(TEXT(Election_Payment_Received_Text__c))
)</errorConditionFormula>
        <errorDisplayField>Election_Payment_Received_Text__c</errorDisplayField>
        <errorMessage>Please select a value for Payment Received Text</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Blank_Not_Allowed_For_Pmt_Rem_Email</fullName>
        <active>true</active>
        <description>If a value is already populated in Payment Reminder Email, it cannot be updated to a blank.</description>
        <errorConditionFormula>AND(
  NOT($Profile.Name=&quot;System Administrator&quot;||$Profile.Name=&quot;API Only&quot;||$Profile.Name=&quot;System Administrator Clone&quot;),
  NOT(Reentrant_Trigger_Executed__c),
  NOT(ISBLANK(TEXT(PRIORVALUE(Election_Payment_Reminder_Email__c)))),
  ISBLANK(TEXT(Election_Payment_Reminder_Email__c))
)</errorConditionFormula>
        <errorDisplayField>Election_Payment_Reminder_Email__c</errorDisplayField>
        <errorMessage>Please select a value for Payment Reminder Email</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Blank_Not_Allowed_For_Pmt_Rem_Text</fullName>
        <active>true</active>
        <description>If a value is already populated in Payment Reminder Text, it cannot be updated to a blank.</description>
        <errorConditionFormula>AND(
  NOT($Profile.Name=&quot;System Administrator&quot;||$Profile.Name=&quot;API Only&quot;||$Profile.Name=&quot;System Administrator Clone&quot;),
  NOT(Reentrant_Trigger_Executed__c),
  NOT(ISBLANK(TEXT(PRIORVALUE(Election_Payment_Reminder_Text__c)))),
  ISBLANK(TEXT(Election_Payment_Reminder_Text__c))
)</errorConditionFormula>
        <errorDisplayField>Election_Payment_Reminder_Text__c</errorDisplayField>
        <errorMessage>Please select a value for Payment Reminder Text</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Blank_Not_Allowed_For_Text_Mktg</fullName>
        <active>true</active>
        <description>If a value is already populated in Text Marketing, it cannot be updated to a blank.</description>
        <errorConditionFormula>AND(
  NOT($Profile.Name=&quot;System Administrator&quot;||$Profile.Name=&quot;API Only&quot;||$Profile.Name=&quot;System Administrator Clone&quot;),
  NOT(Reentrant_Trigger_Executed__c),
  NOT(ISBLANK(TEXT(PRIORVALUE(Election_Text_Marketing__c)))),
  ISBLANK(TEXT(Election_Text_Marketing__c))
)</errorConditionFormula>
        <errorDisplayField>Election_Text_Marketing__c</errorDisplayField>
        <errorMessage>Please select a value for Text Marketing</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Consents_Blank_Prevents_Comm_Prefs_Chang</fullName>
        <active>true</active>
        <description>Preference value changes are not allowed when Abbreviated Consent and Overall Consent are blank.</description>
        <errorConditionFormula>AND(
  NOT($Profile.Name=&quot;System Administrator&quot;||$Profile.Name=&quot;API Only&quot;||$Profile.Name=&quot;System Administrator Clone&quot;),
  NOT(Reentrant_Trigger_Executed__c),
  ISBLANK(TEXT(Election_Overall_Consent__c)) &amp;&amp; ISBLANK(TEXT(Election_Abbreviated_Consent__c)),
  OR(
    ISCHANGED(Election_Payment_Reminder_Text__c),
    ISCHANGED(Election_Payment_Reminder_Email__c),
    ISCHANGED(Election_Payment_Reminder_Day__c),
    ISCHANGED(Election_Payment_Received_Text__c),
    ISCHANGED(Election_Payment_Received_Email__c),
    ISCHANGED(Election_Payment_NotReceivedText__c),
    ISCHANGED(Election_Payment_NotReceivedEmail__c),
    ISCHANGED(Election_Home_Phone_Marketing__c),
    ISCHANGED(Election_Other_Phone_Marketing__c),
    ISCHANGED(Election_Mobile_Phone_Marketing__c),
    ISCHANGED(Election_Email_Marketing__c),
    ISCHANGED(Election_Text_Marketing__c)
  )
)</errorConditionFormula>
        <errorMessage>Account servicing and marketing preference value changes are not allowed when Overall Consent and Abbreviated Consent are blank</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Consents_No_Prevents_Comm_Prefs_Yes</fullName>
        <active>true</active>
        <description>Communication preference values other than &quot;N&quot; are not allowed when Abbreviated Consent/Overall Consent is &quot;N&quot;.</description>
        <errorConditionFormula>AND(
  NOT($Profile.Name=&quot;System Administrator&quot;||$Profile.Name=&quot;API Only&quot;||$Profile.Name=&quot;System Administrator Clone&quot;),
  NOT(Reentrant_Trigger_Executed__c),
  ISPICKVAL(Election_Overall_Consent__c, &quot;N&quot;) || ISPICKVAL(Election_Abbreviated_Consent__c, &quot;N&quot;),
  OR(
    ISPICKVAL(Election_Payment_Reminder_Text__c, &quot;Y&quot;),
    ISPICKVAL(Election_Payment_Reminder_Email__c, &quot;Y&quot;),
    NOT(ISBLANK(TEXT(Election_Payment_Reminder_Day__c))),
    ISPICKVAL(Election_Payment_Received_Text__c, &quot;Y&quot;),
    ISPICKVAL(Election_Payment_Received_Email__c, &quot;Y&quot;),
    ISPICKVAL(Election_Payment_NotReceivedText__c, &quot;Y&quot;),
    ISPICKVAL(Election_Payment_NotReceivedEmail__c, &quot;Y&quot;),
    ISPICKVAL(Election_Home_Phone_Marketing__c, &quot;Y&quot;),
    ISPICKVAL(Election_Other_Phone_Marketing__c, &quot;Y&quot;),
    ISPICKVAL(Election_Mobile_Phone_Marketing__c, &quot;Y&quot;),
    ISPICKVAL(Election_Email_Marketing__c, &quot;Y&quot;),
    ISPICKVAL(Election_Text_Marketing__c, &quot;Y&quot;)
  )
)</errorConditionFormula>
        <errorMessage>Account servicing and marketing preference values of &quot;Y&quot; are not allowed when Overall Consent or Abbreviated Consent is &quot;N&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Garage_Addr_Spec_Inst_Format</fullName>
        <active>true</active>
        <description>Cannot exceed 36 char for Retail and read-only for Lease.</description>
        <errorConditionFormula>AND(
  NOT($Profile.Name=&quot;System Administrator&quot;||$Profile.Name=&quot;API Only&quot;||$Profile.Name=&quot;System Administrator Clone&quot;),
  NOT(Reentrant_Trigger_Executed__c),
  ISCHANGED(Address_Special_Garage__c),
  OR(
    Financial_Account__r.RecordType.Name = &quot;Lease&quot;,
    LEN(Address_Special_Garage__c) &gt; 36 &amp;&amp;  Financial_Account__r.RecordType.Name = &quot;Retail&quot;
)
)</errorConditionFormula>
        <errorDisplayField>Address_Special_Garage__c</errorDisplayField>
        <errorMessage>Care of/special instructions cannot exceed 36 characters for loans and is read-only for leases - undo change or cancel editing if lease</errorMessage>
    </validationRules>
</CustomObject>